Fix bug #27010: segfault after returning nodes with children() Fix segfault in match_ns when matching prefix and node without ns some general cleanup and code consilidation better write handling - engine support dependent better isset handling - engine support dependent namespace fixes for reading/writing